--- a/Client/index.html
+++ b/Client/index.html
@@ -19,6 +19,6 @@
   <!-- 3. Display the application -->
   <body>
     <h4>Index File for All</h4>
-    <my-app>Loading...</my-app>
+    <sumary-post>Loading...</sumary-post>
   </body>
 </html>
